--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,5 +1,6 @@
 .header {
     width: 100%;
+    height: 50px;
     position: fixed;
     top: 0;
     left: 0;
@@ -62,7 +63,7 @@
 
     .nav_menu {
         position: fixed;
-        bottom: -100%;
+        bottom: -90%;
         left: 0;
         width: 100%;
         background-color: var(--body-color);
