--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,11 +1,15 @@
 .header {
     width: 100%;
-    height: 50px;
+    height: 30px;
     position: fixed;
     top: 0;
     left: 0;
     z-index: var(--z-fixed);
     background-color: var(--body-color);
+    background-color: rgba(0, 0, 0, 0.1);
+    justify-content: center;
+    align-items: center;
+    border-radius: 20px 20px 0px 0px;
 }
 
 .nav {
@@ -19,7 +23,7 @@
 .nav_logo,
 .nav_toggle {
     color: var(--title-color);
-    font-weight: var(--font-medium);
+    font-weight: 600;
 }
 
 .nav_list {
