--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,15 +1,16 @@
 .header {
     width: 100%;
-    height: 30px;
+    height: 50px;
     position: fixed;
     top: 0;
     left: 0;
     z-index: var(--z-fixed);
     background-color: var(--body-color);
-    background-color: rgba(0, 0, 0, 0.1);
+    /* background-color: rgba(0, 0, 0, 0.6); */
+    box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
     justify-content: center;
     align-items: center;
-    border-radius: 20px 20px 0px 0px;
+    border-radius: 10px 10px 0px 0px;
 }
 
 .nav {
@@ -23,7 +24,13 @@
 .nav_logo,
 .nav_toggle {
     color: var(--title-color);
-    font-weight: 600;
+    font-weight: 900;
+    top: 13px;
+    position: relative;
+}
+
+.nav_toggle {
+    color: #031299;
 }
 
 .nav_list {
