--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -42,7 +42,7 @@
     margin-bottom: var(--mb-1);
 }
 
- .home_subtitle::before {
+ /* .home_subtitle::before {
     content: '';
     position: absolute;
     width: 70px;
@@ -50,7 +50,7 @@
     background-color: var(--text-color);
     left: 0;
     top: 1rem;
-} 
+}  */
 
 .home_description {
     max-width: 400px;
@@ -65,8 +65,8 @@
     box-shadow: inset 0 0 0 9px rgb(255 255 255 / 30%);
     order: 1;
     justify-self: center;
-    width: 300px;
-    height: 300px;
+    width: 400px;
+    height: 400px;
     animation: profile1_animate 2s ease-in-out infinite 1s; 
 }
 
