--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,75 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* index.css */
+body.light {
+  --background-color: #ffffff;
+  --text-color: #000000;
+}
+
+body.dark {
+  --background-color: #c8c8c9;
+  --text-color: #000000;
+}
+
+body {
+  background-color: var(--background-color);
+  color: var(--text-color);
+  transition: background-color 0.3s, color 0.3s;
+}
+
+/* ThemeToggleButton.css */
+.theme-toggle-button {
+  position: fixed;
+  top: 100px;
+  right: 40px;
+  padding: 10px 15px;
+  background-color: var(--background-color);
+  color: var(--text-color);
+  border: 2px solid var(--text-color);
+  border-radius: 50%;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.theme-toggle-button:hover {
+  background-color: var(--text-color);
+  color: var(--background-color);
+  transform: scale(1.1);
+}
+
+.theme-toggle-icon {
+  font-size: 1.5rem;
+}
+
+@media screen and (max-width: 992px) {
+  .theme-toggle-button {
+    position: fixed;
+    top: 60px;
+    right: 30px;
+    padding: 8px 9px;
+    background-color: var(--background-color);
+    color: var(--text-color);
+    border: 2px solid var(--text-color);
+    border-radius: 40%;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .theme-toggle-button:hover {
+    background-color: var(--text-color);
+    color: var(--background-color);
+    transform: scale(1.1);
+  }
+  
+  .theme-toggle-icon {
+    font-size: 1rem;
+  }
+}
