--- a/src/components/qualification/qualification.css
+++ b/src/components/qualification/qualification.css
@@ -99,4 +99,19 @@
       width: 100%; /* 1 carte par ligne */
     }
   }
+ 
+  .show_more_button {
+    background-color: var(--button-background-color);
+    color: var(--button-text-color);
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 20px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  }
+  
+  .show_more_button:hover {
+    background-color: var(--button-hover-background-color);
+  }
   
