--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -20,7 +20,8 @@
 
 .contact_card {
     background-color: var(--container-color);
-    border: 1px solid rgba(0, 0, 0, 0.1);
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     padding: 1rem;
     border-radius: 0.75rem;
     text-align: center;
@@ -81,6 +82,7 @@
     width: 100%;
     height: 100%;
     border: 2px solid rgba(0, 0, 0, 0.3);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     background: none;
     color: var(--text-color);
     outline: none;
@@ -97,6 +99,8 @@
     padding: 0.25rem;
     background-color: var(--body-color);
     z-index: 10;
+    color: #000;
+    border-radius: 0.2rem;
 }
 
 .contact_form-area {
