--- a/src/components/skills/style.css
+++ b/src/components/skills/style.css
@@ -51,7 +51,7 @@
 
 .skills_progress {
   height: 100%;
-  background-color: #ff6f01;
+  background-color: #000000;
   border-radius: 5px;
   transition: width 0.8s ease;
 }
@@ -194,4 +194,37 @@
   .skills_name {
     font-size: 12px;
   }
+}
+
+
+/* Front */
+.show_more_button {
+  background-color: var(--button-background-color);
+  color: #940202;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 20px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.show_more_button:hover {
+  background-color: var(--button-hover-background-color);
+}
+
+/* Back */
+.show_more_button {
+  background-color: var(--button-background-color);
+  color: var(--button-text-color);
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 20px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.show_more_button:hover {
+  background-color: var(--button-hover-background-color);
 }
